Deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tic-tac-toe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tic-tac-toe
  template:
    metadata:
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - name: tic-tac-toe
        image: prashant680844/tic-tac-toe:latest
        ports:
        - containerPort: 3000   # Open the port numbe 3000
