Deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe-service
spec:
  selector:
    app: tic-tac-toe
  ports:
  - protocol: TCP
    port: 80                 # Expose port 80
    targetPort: 3000
  type: ClusterIP            # here we use ClusterIP insted LoadBalancer
